<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_view_submit_blood_test_result"
        style="@style/font_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/submit_blood_test_result" />


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_submit_blood_test_result"
        android:layout_margin="@dimen/margin_child_layout"
        android:orientation="vertical">

        <!-- Blood Test Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_name" />

        <AutoCompleteTextView

            android:completionThreshold="1"
            android:imeOptions="actionNext"
            android:id="@+id/edit_text_test_name"
            style="@style/edit_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName">

        </AutoCompleteTextView>

        <!-- Blood Test Result -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_result" />

        <EditText
            android:id="@+id/edit_text_test_result"
            style="@style/edit_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/button_submit_blood_test_result"
        style="@style/button_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        android:text="@string/submit_result" />
</RelativeLayout>